# SeleniumTCat

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Linux_安裝.sh  Linux_客戶交易明細.sh  Linux_客樂得對帳單.sh  Linux_更新.sh  PowerShell_安裝.ps1  PowerShell_客戶交易明細.ps1  PowerShell_客樂得對帳單.ps1  PowerShell_更新.ps1  README.md  Windows_安裝.cmd  Windows_客戶交易明細.cmd  Windows_客樂得對帳單.cmd  Windows_更新.cmd  Windows_發票明細.cmd  accounts.json.example  payment_scraper.py  pyproject.toml  requirements.txt  run.cmd  run.sh  run_freight.cmd  run_freight.sh  run_payment.cmd  run_payment.ps1  run_payment.sh  run_unpaid.cmd  run_unpaid.ps1  setup.cmd  setup.ps1  setup.sh  takkyubin_selenium_scraper.py  update.cmd  update.ps1
.claude/: settings.json  settings.local.json
.serena/: project.yml
.serena/memories/: SeleniumTCat跨平台支援架構分析.md
docs/: README.md
docs/architecture/: class-hierarchy.md  configuration.md  data-flow.md  module-design.md  platform-support.md  system-overview.md
docs/development/: best-practices.md  extension-guide.md  setup-guide.md
docs/technical/: README.md  browser-utils-ubuntu-optimization.md  ubuntu-deployment-guide.md
openspec/: project.md
scripts/: common_checks.cmd  common_checks.ps1  common_checks.sh  freight_statement.ps1  install.ps1  install.sh  invoice_details.ps1  run_freight.ps1  run_payment.ps1  run_unpaid.ps1  test_ubuntu_env.sh  ubuntu_quick_setup.sh  update.ps1  update.sh
src/core/: __init__.py  base_scraper.py  browser_utils.py  multi_account_manager.py
src/scrapers/: freight_scraper.py  payment_scraper.py  unpaid_scraper.py
src/utils/: __init__.py  (+4 more)
(+13 files in other folders)
