[project]
name = "takkyubin-scraper"
version = "1.0.0"
description = "黑貓宅急便自動下載工具"
requires-python = ">=3.9"
dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.0",
    "ddddocr==1.4.7",
    "onnxruntime>=1.16.0",
    "pillow<10.0.0",
    "numpy>=1.26.0,<2.0.0",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
include = [
    "src/scrapers/payment_scraper.py",
    "accounts.json",
    ".env",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"